<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信</string>
    <string name="title">标题</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="country">国家和地区</string>
    <string name="china">中国</string>
    <string name="you_phone">你的手机号</string>
    <string name="p_86">+86</string>
    <string name="password">密码</string>
    <string name="pass_code">验证码</string>
    <string name="send_pass_code">发送验证码</string>
    <string name="pass_code_hint">请输入验证码</string>
    <string name="you_password">填写密码</string>
    <string name="logon">登录</string>
    <string name="problem">登录遇到问题？</string>
    <string name="login">注册</string>
    <string name="contact">通讯录</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="safety">账号安全</string>
    <string name="wx_name">Hello Word</string>
    <string name="wx_code">微信号：</string>
    <string name="photoes">相册</string>
    <string name="collecton">收藏</string>
    <string name="wallet">钱包</string>
    <string name="cards">卡包</string>
    <string name="face">表情</string>
    <string name="setting">设置</string>
    <string name="news">新消息通知</string>
    <string name="privacy">隐私</string>
    <string name="ge">通用</string>
    <string name="about">关于微信</string>
    <string name="logout">退出登录</string>
    <string name="friends">朋友圈</string>
    <string name="sweep">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="nearby">附近的人</string>
    <string name="drift">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="game">游戏</string>
    <string name="test">testtesttest</string>
    <string name="new_friend">新的朋友</string>
    <string name="group">群聊</string>
    <string name="public_num">公众号</string>
    <string name="area">地区</string>
    <string name="autograph">个人签名</string>
    <string name="my_photoes">个人相册</string>
    <string name="send_message">发送消息</string>
    <string name="addnewfriend">添加朋友</string>
    <string name="search">搜索</string>
    <string name="add_phone_con">添加手机联系人</string>
    <string name="add_qq_fri">添加QQ好友</string>
    <string name="receive">接受</string>
    <string name="received">已接受</string>
    <string name="queding">确定</string>
    <string name="send">发送</string>
    <string name="send_voice">按住说话</string>
    <string name="pics">图片</string>
    <string name="camera">拍照</string>
    <string name="location">位置</string>
    <string name="file">文件</string>
    <string name="voice_phone">语音通话</string>
    <string name="video">视频通话</string>

</resources>